// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SongTitle Snapshot Tests > renders a longer song title and artist 1`] = `
<div>
  <div
    class="w-full text-left"
  >
    <h1
      class="ml-4 mt-4 text-2xl font-bold text-light-highlight dark:text-dark-highlight md:text-4xl"
    >
      Carry on My Wayward Wayward Wayward Son
    </h1>
    <p
      class="ml-4 text-xl text-light-highlight dark:text-dark-highlight md:py-2 md:text-2xl"
    >
      NotKansas
    </p>
  </div>
</div>
`;

exports[`SongTitle Snapshot Tests > renders a song title and artist 1`] = `
<div>
  <div
    class="w-full text-left"
  >
    <h1
      class="ml-4 mt-4 text-2xl font-bold text-light-highlight dark:text-dark-highlight md:text-4xl"
    >
      Schism
    </h1>
    <p
      class="ml-4 text-xl text-light-highlight dark:text-dark-highlight md:py-2 md:text-2xl"
    >
      Tool
    </p>
  </div>
</div>
`;
